# opencv

./: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h  practice.cpp
